--- a/inner.html
+++ b/inner.html
@@ -12,12 +12,14 @@
       <header class="main-header">
         <nav class="main-navigation">
           <div class="container">
-            <ul class="site-navigation">
+            <ul class="site-navigation-one">
               <li><a href="information.html">Информация</a></li>
               <li><a href="photo.html">Фото и видео</a></li>
-              <li><a class="main-header-logo" href="index.html">
-                <img src="img/logo-sedona.svg" width="140" height="70" alt="Логотип города Седона"></a>
-              </li>
+            </ul>
+            <a class="main-header-logo" href="index.html">
+              <img src="img/logo-sedona.svg" width="140" height="70" alt="Логотип города Седона">
+            </a>
+            <ul class="site-navigation-two">
               <li><a href="map-state.html">Карта штата</a></li>
               <li class="hotel-navigation"><a href="inner.html">Гостиницы</a></li>
             </ul>
@@ -30,22 +32,22 @@
         <form class="form-search" action="https://echo.htmlacademy.ru" method="get">
           <fieldset>
             <legend>Инфраструктура:</legend>
-            <ul>
+            <ul class="form-list-info">
               <li class="form-filter">
-                <label class="form-pool">
-                  <input class="filter-option" type="checkbox" name="pool" checked>
+                <label for="pool">
+                  <input class="filter-option" type="checkbox" id="pool" checked>
                   Бассейн
                 </label>
               </li>
               <li class="form-filter">
-                <label class="form-parking">
-                  <input class="filter-option" type="checkbox" name="parking">
+                <label for="parking">
+                  <input class="filter-option" type="checkbox" id="parking">
                   Парковка
                 </label>
               </li>
               <li class="form-filter">
-                <label class="form-wi-fi">
-                  <input class="filter-option" type="checkbox" name="wi-fi">
+                <label for="wi-fi">
+                  <input class="filter-option" type="checkbox" id="wi-fi">
                   Wi-fi
                 </label>
               </li>
@@ -53,22 +55,22 @@
           </fieldset>
           <fieldset>
             <legend>Тип жилья:</legend>
-            <ul>
+            <ul class="form-list-type">
               <li class="form-filter">
-                <label class="form-hotel">
-                  <input class="filter-option" type="checkbox" name="hotel" checked>
+                <label for="form-hotel">
+                  <input class="filter-option" type="checkbox" id="form-hotel" checked>
                   Гостиница
                 </label>
               </li>
               <li class="form-filter">
-                <label class="form-motel">
-                  <input class="filter-option" type="checkbox" name="motel" checked>
+                <label for="form-motel">
+                  <input class="filter-option" type="checkbox" id="form-motel" checked>
                   Мотель
                 </label>
               </li>
               <li class="form-filter">
-                <label class="form-apartments">
-                  <input class="filter-option" type="checkbox" name="apartments" checked>
+                <label for="form-apartments">
+                  <input class="filter-option" type="checkbox" id="form-apartments" checked>
                   Апартаменты
                 </label>
               </li>
