Основное задание: декоративные элементы личного проекта

--- a/index.html
+++ b/index.html
@@ -11,19 +11,15 @@
     <div class="container">
       <header class="main-header">
         <nav class="main-navigation">
-          <div class="container">
-            <ul class="site-navigation-one">
-              <li><a href="information.html">Информация</a></li>
-              <li><a href="photo.html">Фото и видео</a></li>
-            </ul>
             <a class="main-header-logo" href="index.html">
               <img src="img/logo-sedona.svg" width="140" height="70" alt="Логотип города Седона">
             </a>
-            <ul class="site-navigation-two">
+            <ul class="site-navigation">
+              <li><a href="information.html">Информация</a></li>
+              <li><a href="photo.html">Фото и видео</a></li>
               <li><a href="map-state.html">Карта штата</a></li>
               <li><a href="inner.html">Гостиницы</a></li>
             </ul>
-          </div>
         </nav>
       </header>
 
@@ -40,7 +36,7 @@
 
         <section class="feature">
           <div class="feature-text">
-            <h2>Настоящий городок</h2>
+            <h2>Настоящий</br>городок</h2>
             <span>- №1 -</span>
             <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
@@ -57,12 +53,12 @@
               <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="offers-item">
-              <img src="img/icon-2.svg" width="76" height="70" alt="Еда">
+              <img src="img/icon-3.svg" width="76" height="70" alt="Еда">
               <h2>Еда</h2>
               <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="offers-item">
-              <img src="img/icon-3.svg" width="65" height="76" alt="Сувениры">
+              <img src="img/icon-2.svg" width="65" height="76" alt="Сувениры">
               <h2>Сувениры</h2>
               <p>Не только китайского, но и местного производства!</p>
             </li>
@@ -74,7 +70,7 @@
             <img src="img/index-pic2.jpg" width="800" height="256" alt="Мост дьявола">
           </div>
           <div class="feature-text">
-            <h2>Там есть мост дьявола</h2>
+            <h2>Там есть</br>мост дьявола</h2>
             <span>- №2 -</span>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </div>
@@ -147,16 +143,40 @@
         <p class="footer-visit">#visitsedona</p>
         <div class="footer-social">
           <ul>
-            <li><a class="button-social" href="#">Твиттер</a></li>
-            <li><a class="button-social" href="#">Фэйсбук</a></li>
-            <li><a class="button-social" href="#">Ютуб</a></li>
+            <li><a class="button-social" href="#"><span class="visually-hidden">
+              Твиттер</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="17" height="15">
+                  <path d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231
+                     1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304
+                     -.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c
+                     -.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477
+                     -2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536
+                     1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254
+                     2.33 9.183.793 10.95.144z" fill="#FFF">
+                  </path>
+                </svg>
+                </a>
+            </li>
+            <li><a class="button-social" href="#"><span class="visually-hidden">Фэйсбук</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                  <path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#FFF">
+                  </path>
+                </svg>
+                </a>
+            </li>
+            <li><a class="button-social" href="#"><span class="visually-hidden">Ютуб</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16">
+                  <path d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35
+                    3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z" fill="#FFF">
+                  </path>
+                </svg>
+                </a>
+            </li>
           </ul>
         </div>
         <p class="footer-copyright">
           <b>website by</b>
-          <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/logo-htmlacademy.svg" width="115" height="40" alt="Логотип разработчика">
-          </a>
+          <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss"></a>
         </p>
       </footer>
     </div>
