--- a/inner.html
+++ b/inner.html
@@ -11,83 +11,88 @@
     <div class="container">
       <header class="main-header">
         <nav class="main-navigation">
-          <div class="container">
-            <ul class="site-navigation-one">
+          <a class="main-header-logo" href="index.html">
+            <img src="img/logo-sedona.svg" width="140" height="70" alt="Логотип города Седона">
+          </a>
+            <ul class="site-navigation">
               <li><a href="information.html">Информация</a></li>
               <li><a href="photo.html">Фото и видео</a></li>
-            </ul>
-            <a class="main-header-logo" href="index.html">
-              <img src="img/logo-sedona.svg" width="140" height="70" alt="Логотип города Седона">
-            </a>
-            <ul class="site-navigation-two">
               <li><a href="map-state.html">Карта штата</a></li>
               <li class="hotel-navigation"><a href="inner.html">Гостиницы</a></li>
             </ul>
-          </div>
         </nav>
       </header>
 
       <main class="main-container">
         <h1 class="visually-hidden">Гостиницы</h1>
         <form class="form-search" action="https://echo.htmlacademy.ru" method="get">
-          <fieldset>
-            <legend>Инфраструктура:</legend>
-            <ul class="form-list-info">
-              <li class="form-filter">
-                <label for="pool">
-                  <input class="filter-option" type="checkbox" id="pool" checked>
-                  Бассейн
-                </label>
-              </li>
-              <li class="form-filter">
-                <label for="parking">
-                  <input class="filter-option" type="checkbox" id="parking">
-                  Парковка
-                </label>
-              </li>
-              <li class="form-filter">
-                <label for="wi-fi">
-                  <input class="filter-option" type="checkbox" id="wi-fi">
-                  Wi-fi
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset>
-            <legend>Тип жилья:</legend>
-            <ul class="form-list-type">
-              <li class="form-filter">
-                <label for="form-hotel">
-                  <input class="filter-option" type="checkbox" id="form-hotel" checked>
-                  Гостиница
-                </label>
-              </li>
-              <li class="form-filter">
-                <label for="form-motel">
-                  <input class="filter-option" type="checkbox" id="form-motel" checked>
-                  Мотель
-                </label>
-              </li>
-              <li class="form-filter">
-                <label for="form-apartments">
-                  <input class="filter-option" type="checkbox" id="form-apartments" checked>
-                  Апартаменты
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset>
-            <legend>Стоимость в сутки(р):</legend>
-            <ul class="form-cost">
-              <li>
-                <input class="form-window" type="text" name="window" value="от 0">
-              </li>
-              <li>
-                <input class="form-window" type="text" name="window" value="до 3000">
-              </li>
-            </ul>
+          <div class="filters">
+            <fieldset>
+              <legend>Инфраструктура:</legend>
+              <ul class="form-list-info">
+                <li class="form-filter">
+                  <label for="pool">
+                    <input class="filter-option" type="checkbox" id="pool" checked>
+                    Бассейн
+                  </label>
+                </li>
+                <li class="form-filter">
+                  <label for="parking">
+                    <input class="filter-option" type="checkbox" id="parking">
+                    Парковка
+                  </label>
+                </li>
+                <li class="form-filter">
+                  <label for="wi-fi">
+                    <input class="filter-option" type="checkbox" id="wi-fi">
+                    Wi-fi
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset>
+              <legend>Тип жилья:</legend>
+              <ul class="form-list-type">
+                <li class="form-filter">
+                  <label for="form-hotel">
+                    <input class="filter-option" type="checkbox" id="form-hotel" checked>
+                    Гостиница
+                  </label>
+                </li>
+                <li class="form-filter">
+                  <label for="form-motel">
+                    <input class="filter-option" type="checkbox" id="form-motel" checked>
+                    Мотель
+                  </label>
+                </li>
+                <li class="form-filter">
+                  <label for="form-apartments">
+                    <input class="filter-option" type="checkbox" id="form-apartments" checked>
+                    Апартаменты
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
+          <div class="filter-range">
+            <div class="filter-range-title">Стоимость в сутки(р):</div>
+            <div class="price-controls">
+              <label class="min-price">от
+                <input class="form-window" type="text" name="window" value="0">
+              </label>
+              <label class="max-price">до
+                <input class="form-window" type="text" name="window" value="3000">
+              </label>
+            </div>
+            <div class="range-controls">
+              <div class="scale">
+                <div class="bar"></div>
+              </div>
+              <div class="range-toggle range-toggle-min"></div>
+              <div class="range-toggle range-toggle-max"></div>
+            </div>
             <button class="form-button" type="submit">Показать</button>
-          </fieldset>
+          </div>
         </form>
 
         <section class="sorting">
@@ -101,8 +106,18 @@
             </ul>
           </div>
           <div class="sorting-arrow">
-            <a class="arrow-up" href="#"></a>
-            <a class="arrow-down" href="#"></a>
+            <a class="arrow-up" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                <path d="M5.5 0L0 10h11z" fill="#cacaca">
+                </path>
+              </svg>
+            </a>
+            <a class="arrow-down" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                <path d="M5.5 10L0 0h11" fill="#81b3d2">
+                </path>
+              </svg>
+            </a>
           </div>
         </section>
 
@@ -117,7 +132,7 @@
                   <h2 class="catalog-item-title">
                     <a href="catalog-item.html">Amara record & spa</a>
                   </h2>
-                  <span>Гостиница</span>
+                  <span class="catalog-hotel">Гостиница</span>
                   <span>От 4000 р.</span>
                   <p class="catalog-item-button">
                     <a class="button-more" href="#">Подробнее</a>
@@ -127,10 +142,10 @@
               </div>
               <div class="hotel-rating">
                 <div class="hotel-rating-stars">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                  <span></span>
+                  <span class="star1"></span>
+                  <span class="star2"></span>
+                  <span class="star3"></span>
+                  <span class="star4"></span>
                 </div>
                 <p class="hotel-rating-text">Рейтинг:8,5</p>
               </div>
@@ -145,7 +160,7 @@
                   <h2 class="catalog-item-title">
                     <a href="catalog-item.html">Desert quail inn</a>
                   </h2>
-                  <span>Мотель</span>
+                  <span class="catalog-motel">Мотель</span>
                   <span>От 3000 р.</span>
                   <p class="catalog-item-button">
                     <a class="button-more" href="#">Подробнее</a>
@@ -154,10 +169,10 @@
                 </div>
               </div>
               <div class="hotel-rating">
-                <div class="hotel-rating-stars">
-                  <span></span>
-                  <span></span>
-                  <span></span>
+                <div class="hotel-rating-stars stars1">
+                  <span class="star2"></span>
+                  <span class="star4"></span>
+                  <span class="star3"></span>
                 </div>
                 <p class="hotel-rating-text">Рейтинг:8,9</p>
               </div>
@@ -172,7 +187,7 @@
                   <h2 class="catalog-item-title">
                     <a href="catalog-item.html">Villas at poco diablo</a>
                   </h2>
-                  <span>Апартаменты</span>
+                  <span class="catalog-apartment">Апартаменты</span>
                   <span>От 2000 р.</span>
                   <p class="catalog-item-button">
                     <a class="button-more" href="#">Подробнее</a>
@@ -181,9 +196,9 @@
                 </div>
               </div>
               <div class="hotel-rating">
-                <div class="hotel-rating-stars">
-                  <span></span>
-                  <span></span>
+                <div class="hotel-rating-stars stars2">
+                  <span class="star3"></span>
+                  <span class="star4"></span>
                 </div>
                 <p class="hotel-rating-text">Рейтинг:9.2</p>
               </div>
@@ -196,16 +211,40 @@
         <p class="footer-visit">#visitsedona</p>
         <div class="footer-social">
           <ul>
-            <li><a class="button-social" href="#">Твиттер</a></li>
-            <li><a class="button-social" href="#">Фэйсбук</a></li>
-            <li><a class="button-social" href="#">Ютуб</a></li>
+            <li><a class="button-social" href="#"><span class="visually-hidden">
+              Твиттер</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="17" height="15">
+                  <path d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231
+                     1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304
+                     -.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c
+                     -.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477
+                     -2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536
+                     1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254
+                     2.33 9.183.793 10.95.144z" fill="#FFF">
+                  </path>
+                </svg>
+                </a>
+            </li>
+            <li><a class="button-social" href="#"><span class="visually-hidden">Фэйсбук</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                  <path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#FFF">
+                  </path>
+                </svg>
+                </a>
+            </li>
+            <li><a class="button-social" href="#"><span class="visually-hidden">Ютуб</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16">
+                  <path d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35
+                      3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z" fill="#FFF">
+                  </path>
+                </svg>
+                </a>
+            </li>
           </ul>
         </div>
         <p class="footer-copyright">
           <b>website by</b>
-          <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/logo-htmlacademy.svg" width="115" height="40" alt="Логотип разработчика">
-          </a>
+          <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss"></a>
         </p>
       </footer>
     </div>
