Основное задание: завершаем вёрстку личного проекта.

--- a/inner.html
+++ b/inner.html
@@ -14,12 +14,12 @@
           <a class="main-header-logo" href="index.html">
             <img src="img/logo-sedona.svg" width="140" height="70" alt="Логотип города Седона">
           </a>
-            <ul class="site-navigation">
-              <li><a href="information.html">Информация</a></li>
-              <li><a href="photo.html">Фото и видео</a></li>
-              <li><a href="map-state.html">Карта штата</a></li>
-              <li class="hotel-navigation"><a href="inner.html">Гостиницы</a></li>
-            </ul>
+          <ul class="site-navigation">
+            <li><a href="information.html">Информация</a></li>
+            <li><a href="photo.html">Фото и видео</a></li>
+            <li><a href="map-state.html">Карта штата</a></li>
+            <li class="hotel-navigation"><a href="inner.html">Гостиницы</a></li>
+          </ul>
         </nav>
       </header>
 
@@ -31,22 +31,16 @@
               <legend>Инфраструктура:</legend>
               <ul class="form-list-info">
                 <li class="form-filter">
-                  <label for="pool">
-                    <input class="filter-option" type="checkbox" id="pool" checked>
-                    Бассейн
-                  </label>
+                  <input class="filter-option" type="checkbox" id="pool" checked>
+                  <label for="pool">Бассейн</label>
                 </li>
                 <li class="form-filter">
-                  <label for="parking">
-                    <input class="filter-option" type="checkbox" id="parking">
-                    Парковка
-                  </label>
+                  <input class="filter-option" type="checkbox" id="parking">
+                  <label for="parking">Парковка</label>
                 </li>
                 <li class="form-filter">
-                  <label for="wi-fi">
-                    <input class="filter-option" type="checkbox" id="wi-fi">
-                    Wi-fi
-                  </label>
+                  <input class="filter-option" type="checkbox" id="wi-fi">
+                  <label for="wi-fi">Wi-fi</label>
                 </li>
               </ul>
             </fieldset>
@@ -54,22 +48,16 @@
               <legend>Тип жилья:</legend>
               <ul class="form-list-type">
                 <li class="form-filter">
-                  <label for="form-hotel">
-                    <input class="filter-option" type="checkbox" id="form-hotel" checked>
-                    Гостиница
-                  </label>
+                  <input class="filter-option" type="checkbox" id="form-hotel" checked>
+                  <label for="form-hotel">Гостиница</label>
                 </li>
                 <li class="form-filter">
-                  <label for="form-motel">
-                    <input class="filter-option" type="checkbox" id="form-motel" checked>
-                    Мотель
-                  </label>
+                  <input class="filter-option" type="checkbox" id="form-motel" checked>
+                  <label for="form-motel">Мотель</label>
                 </li>
                 <li class="form-filter">
-                  <label for="form-apartments">
-                    <input class="filter-option" type="checkbox" id="form-apartments" checked>
-                    Апартаменты
-                  </label>
+                  <input class="filter-option" type="checkbox" id="form-apartments" checked>
+                  <label for="form-apartments">Апартаменты</label>
                 </li>
               </ul>
             </fieldset>
@@ -135,17 +123,17 @@
                   <span class="catalog-hotel">Гостиница</span>
                   <span>От 4000 р.</span>
                   <p class="catalog-item-button">
-                    <a class="button-more" href="#">Подробнее</a>
-                    <a class="button-booking" href="#">Забронировать</a>
+                    <a class="btn button-more" href="#">Подробнее</a>
+                    <a class="btn button-booking" href="#">Забронировать</a>
                   </p>
                 </div>
               </div>
               <div class="hotel-rating">
                 <div class="hotel-rating-stars">
-                  <span class="star1"></span>
-                  <span class="star2"></span>
-                  <span class="star3"></span>
-                  <span class="star4"></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
                 </div>
                 <p class="hotel-rating-text">Рейтинг:8,5</p>
               </div>
@@ -163,16 +151,16 @@
                   <span class="catalog-motel">Мотель</span>
                   <span>От 3000 р.</span>
                   <p class="catalog-item-button">
-                    <a class="button-more" href="#">Подробнее</a>
-                    <a class="button-booking" href="#">Забронировать</a>
+                    <a class=" btn button-more" href="#">Подробнее</a>
+                    <a class="btn button-booking" href="#">Забронировать</a>
                   </p>
                 </div>
               </div>
               <div class="hotel-rating">
-                <div class="hotel-rating-stars stars1">
-                  <span class="star2"></span>
-                  <span class="star4"></span>
-                  <span class="star3"></span>
+                <div class="hotel-rating-stars">
+                  <span></span>
+                  <span></span>
+                  <span></span>
                 </div>
                 <p class="hotel-rating-text">Рейтинг:8,9</p>
               </div>
@@ -190,15 +178,15 @@
                   <span class="catalog-apartment">Апартаменты</span>
                   <span>От 2000 р.</span>
                   <p class="catalog-item-button">
-                    <a class="button-more" href="#">Подробнее</a>
-                    <a class="button-booking" href="#">Забронировать</a>
+                    <a class="btn button-more" href="#">Подробнее</a>
+                    <a class="btn button-booking" href="#">Забронировать</a>
                   </p>
                 </div>
               </div>
               <div class="hotel-rating">
-                <div class="hotel-rating-stars stars2">
-                  <span class="star3"></span>
-                  <span class="star4"></span>
+                <div class="hotel-rating-stars">
+                  <span></span>
+                  <span></span>
                 </div>
                 <p class="hotel-rating-text">Рейтинг:9.2</p>
               </div>
