--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
+    <div class="container ">
       <header class="main-header">
         <nav class="main-navigation">
-            <a class="main-header-logo" href="index.html">
-              <img src="img/logo-sedona.svg" width="140" height="70" alt="Логотип города Седона">
-            </a>
-            <ul class="site-navigation">
-              <li><a href="information.html">Информация</a></li>
-              <li><a href="photo.html">Фото и видео</a></li>
-              <li><a href="map-state.html">Карта штата</a></li>
-              <li><a href="inner.html">Гостиницы</a></li>
-            </ul>
+          <a class="main-header-logo" href="index.html">
+            <img src="img/logo-sedona.svg" width="140" height="70" alt="Логотип города Седона">
+          </a>
+          <ul class="site-navigation">
+            <li><a href="information.html">Информация</a></li>
+            <li><a href="photo.html">Фото и видео</a></li>
+            <li><a href="map-state.html">Карта штата</a></li>
+            <li><a href="inner.html">Гостиницы</a></li>
+          </ul>
         </nav>
       </header>
 
@@ -36,7 +36,7 @@
 
         <section class="feature">
           <div class="feature-text">
-            <h2>Настоящий</br>городок</h2>
+            <h2 class="feature-text-city">Настоящий городок</h2>
             <span>- №1 -</span>
             <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
@@ -70,7 +70,7 @@
             <img src="img/index-pic2.jpg" width="800" height="256" alt="Мост дьявола">
           </div>
           <div class="feature-text">
-            <h2>Там есть</br>мост дьявола</h2>
+            <h2>Там есть<br>мост дьявола</h2>
             <span>- №2 -</span>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </div>
@@ -104,28 +104,39 @@
           <section class="form">
             <h2 class="visually-hidden">Поиск гостиницы</h2>
             <form class="form-booking" action="https://echo.htmlacademy.ru" method="post">
-              <p>
-                <label for="arrival">Дата заезда:</label>
+              <div class="form-data">
+                <p>
+                  <label for="arrival">Дата заезда:</label>
                   <input type="text" class="arrival" id="arrival" value="24 апреля 2017">
-                <button class="form-calendar" type="button"></button>
-              </p>
-              <p>
-                <label for="departure">Дата выезда:</label>
+                  <button class="form-calendar calendar-arrival" type="button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
+                      <path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/>
+                      <path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
+                    </svg>
+                  </button>
+                </p>
+                <p>
+                  <label for="departure">Дата выезда:</label>
                   <input type="text" class="departure" id="departure" value="4 июля 2017">
-                <button class="form-calendar" type="button"></button>
-              </p>
-              <p>
+                  <button class="form-calendar calendar-departure" type="button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
+                      <path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/>
+                      <path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
+                    </svg>
+                  </button>
+                </p>
+              </div>
+              <div class="form-quantity">
                 <label for="adults">Взрослые:</label>
-                  <button class="form-minus" type="button"></button>
-                  <input type="text" class="adults" id="adults" value="2">
-                  <button class="form-plus" type="button"></button>
-              </p>
-              <p>
+                <button class="form-minus minus-adults" type="button"></button>
+                <input type="text" class="adults" id="adults" value="2">
+                <button class="form-plus plus-adults" type="button"></button>
+
                 <label for="children">Дети:</label>
-                  <button class="form-minus" type="button"></button>
-                  <input type="text" class="children" id="children" value="0">
-                  <button class="form-plus" type="button"></button>
-              </p>
+                <button class="form-minus minus-children" type="button"></button>
+                <input type="text" class="children" id="children" value="0">
+                <button class="form-plus plus-children" type="button"></button>
+              </div>
               <p>
                 <button class="button" type="submit">Найти</button>
               </p>
@@ -135,11 +146,11 @@
 
         <section class="map">
           <h2 class="visually-hidden">Карта</h2>
-          <img src="img/map.png" width="1200" height="473" alt="Карта">
+          <img src="img/map.png" width="1200" height="593" alt="Карта">
         </section>
       </main>
 
-      <footer class="main-footer">
+      <footer class="main-footer main-footer-index">
         <p class="footer-visit">#visitsedona</p>
         <div class="footer-social">
           <ul>
