--- a/inner.html
+++ b/inner.html
@@ -18,7 +18,7 @@
             <li><a href="information.html">Информация</a></li>
             <li><a href="photo.html">Фото и видео</a></li>
             <li><a href="map-state.html">Карта штата</a></li>
-            <li class="hotel-navigation"><a href="inner.html">Гостиницы</a></li>
+            <li class="site-navigation-current"><a href="inner.html">Гостиницы</a></li>
           </ul>
         </nav>
       </header>
@@ -30,16 +30,16 @@
             <fieldset>
               <legend>Инфраструктура:</legend>
               <ul class="form-list-info">
-                <li class="form-filter">
-                  <input class="filter-option" type="checkbox" id="pool" checked>
+                <li class="form-filter checkbox-on">
+                  <input class="visually-hidden filter-option" type="checkbox" id="pool" checked>
                   <label for="pool">Бассейн</label>
                 </li>
-                <li class="form-filter">
-                  <input class="filter-option" type="checkbox" id="parking">
+                <li class="form-filter checkbox-off">
+                  <input class="visually-hidden filter-option" type="checkbox" id="parking">
                   <label for="parking">Парковка</label>
                 </li>
-                <li class="form-filter">
-                  <input class="filter-option" type="checkbox" id="wi-fi">
+                <li class="form-filter checkbox-off">
+                  <input class="visually-hidden filter-option" type="checkbox" id="wi-fi">
                   <label for="wi-fi">Wi-fi</label>
                 </li>
               </ul>
@@ -47,16 +47,16 @@
             <fieldset>
               <legend>Тип жилья:</legend>
               <ul class="form-list-type">
-                <li class="form-filter">
-                  <input class="filter-option" type="checkbox" id="form-hotel" checked>
+                <li class="form-filter checkbox-on">
+                  <input class="visually-hidden filter-option" type="checkbox" id="form-hotel" checked>
                   <label for="form-hotel">Гостиница</label>
                 </li>
-                <li class="form-filter">
-                  <input class="filter-option" type="checkbox" id="form-motel" checked>
+                <li class="form-filter checkbox-on">
+                  <input class="visually-hidden filter-option" type="checkbox" id="form-motel" checked>
                   <label for="form-motel">Мотель</label>
                 </li>
-                <li class="form-filter">
-                  <input class="filter-option" type="checkbox" id="form-apartments" checked>
+                <li class="form-filter checkbox-on">
+                  <input class="visually-hidden filter-option" type="checkbox" id="form-apartments" checked>
                   <label for="form-apartments">Апартаменты</label>
                 </li>
               </ul>
