--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container ">
+    <div class="container">
       <header class="main-header">
         <nav class="main-navigation">
           <a class="main-header-logo" href="index.html">
@@ -37,7 +37,7 @@
         <section class="feature">
           <div class="feature-text">
             <h2 class="feature-text-city">Настоящий городок</h2>
-            <span>- №1 -</span>
+            <span>— №1 —</span>
             <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
           <div class="feature-image">
@@ -71,7 +71,7 @@
           </div>
           <div class="feature-text">
             <h2>Там есть<br>мост дьявола</h2>
-            <span>- №2 -</span>
+            <span>— №2 —</span>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </div>
         </section>
@@ -80,17 +80,17 @@
           <ul class="reasons-list">
             <li class="reasons-item">
               <h2>Небольшая площадь</h2>
-              <span>- №3 -</span>
+              <span>— №3 —</span>
               <p>Все достопримечательности находятся очень близко</p>
             </li>
             <li class="reasons-item">
               <h2>Красивая дорога</h2>
-              <span>- №4 -</span>
+              <span>— №4 —</span>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="reasons-item">
               <h2>Мало туристов</h2>
-              <span>- №5 -</span>
+              <span>— №5 —</span>
               <p>Большинство едет в гранд каньон и толпится там</p>
             </li>
           </ul>
@@ -191,5 +191,15 @@
         </p>
       </footer>
     </div>
+    <script>
+      var search = document.querySelector(".search-button");
+      var popup = document.querySelector(".form");
+
+      search.addEventListener("click", function(evt) {
+        evt.preventDefault();
+        popup.classList.toggle("form-show");
+      });
+
+    </script>
   </body>
 </html>
